[workspace]
members = ["util"]

[package]
name = "rocd"
version = "0.1.0"
edition = "2024"

[features]
default = []
pipewire = ["dep:pipewire"]

[lib]
name = "rocd"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "rocd"
path = "src/main.rs"
test = false

[lints.rust]
dead_code = "allow"

[lints.clippy]
let_and_return = "allow"
new_without_default = "allow"
redundant_closure = "allow"
upper_case_acronyms = "allow"

[dev-dependencies]
assertables = "9.5.1"
ctor = "0.4.1"
procspawn = "1.0.1"
progenitor-client = "0.10.0"
tempfile = "3.19.1"
tracing-test = "0.2.5"

[dev-dependencies.reqwest]
version = "0.12.15"
features = ["json", "stream"]

[dependencies]
derive_builder = "0.20.2"
quick_cache = "0.6.13"
redb = "2.4.0"
regex = "1.11.1"
regex_static = "0.1.1"
rmp-serde = "1.3.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.axum]
version = "0.8.4"
features = ["http2"]

[dependencies.axum-server]
version = "0.7.2"

[dependencies.clap]
version = "4.5.32"
default-features = false
features = ["std", "help", "usage", "error-context", "derive", "wrap_help"]

[dependencies.pipewire]
version = "0.8.0"
optional = true

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.tower]
version = "0.5.2"

[dependencies.tower-http]
version = "0.6.4"
features = ["normalize-path"]

[dependencies.utoipa]
version = "5.3.1"
features = ["yaml", "axum_extras", "uuid", "preserve_order", "preserve_path_order"]

[dependencies.utoipa-axum]
version = "0.2.0"

[dependencies.utoipa-redoc]
version = "6.0.0"
features = ["axum"]
