[workspace]
members = ["util"]

[workspace.package]
publish = false

[workspace.dependencies.clap]
version = "4.5.32"
features = ["derive", "wrap_help"]

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.140"

[package]
name = "rocd"
version = "0.1.0"
edition = "2024"
description = "Real-time audio streaming daemon."
repository = "https://github.com/roc-streaming/rocd"
license = "MPL-2.0"

[features]
default = ["daemon"]
daemon = []
driver-tests = []
pipewire = ["dep:pipewire"]

[lib]
name = "rocd"
path = "src/lib.rs"
test = true
doctest = false

[[bin]]
name = "rocd"
path = "src/main.rs"
test = false
doctest = false
required-features = ["daemon"]

[lints.rust]
dead_code = "allow"

[lints.clippy]
let_and_return = "allow"
new_without_default = "allow"
redundant_closure = "allow"
upper_case_acronyms = "allow"

[dev-dependencies]
assertables = "9.5.1"
ctor = "0.4.1"
procspawn = "1.0.1"
progenitor-client = "0.11.0"
tempfile = "3.19.1"
test-context = "0.4.1"
tracing-test = "0.2.5"

[dev-dependencies.reqwest]
version = "0.12.15"
features = ["json", "stream"]

[dependencies]
async-trait = "0.1.88"
axum-server = "0.7.2"
derive_builder = "0.20.2"
quick_cache = "0.6.13"
rand = "0.9.1"
redb = "2.4.0"
regex = "1.11.1"
regex_static = "0.1.1"
rmp-serde = "1.3.0"
sha2 = "0.10.9"
thiserror = "2.0.12"
tower = "0.5.2"
tracing = "0.1.41"
tracing-core = "0.1.33"
url = "2.5.4"
utoipa-axum = "0.2.0"

[dependencies.axum]
version = "0.8.4"
features = ["http2"]

[dependencies.clap]
workspace = true

[dependencies.pipewire]
version = "0.8.0"
optional = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.strum]
version = "0.27.1"
features = ["derive"]

[dependencies.time]
version = "0.3.41"
features = ["formatting", "macros"]

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.tower-http]
version = "0.6.4"
features = ["normalize-path", "trace"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["local-time"]

[dependencies.utoipa]
version = "5.3.1"
features = ["axum_extras", "preserve_order", "preserve_path_order", "yaml"]

[dependencies.utoipa-redoc]
version = "6.0.0"
features = ["axum"]
