[package]
name = "util"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "codegen"
path = "codegen.rs"
test = false

[dependencies]
prettyplease = "0.2.32"
progenitor = "0.10.0"
syn = "2.0.101"
clap = "4.5.0"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.rocd]
path = ".."
