[package]
name = "util"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "codegen"
path = "codegen.rs"
test = false

[dependencies]
prettyplease = "0.2.32"
progenitor = "0.10.0"
syn = "2.0.101"

[dependencies.clap]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.rocd]
path = ".."
